# Finanzas-antifr-gil

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vercel.json
.claude/: CLAUDE.md  SESSION.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ARQUITECTURA.md  CHANGELOG.md  GETTING-STARTED.md  ROADMAP.md  SESSION.md
plantillas-importacion/: README.md  facturas_emitidas.csv  gastos.csv  (+2 more)
services/python/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  app.py  pyproject.toml  run_dashboard.bat  start_mcp.bat
services/python/pages/: busqueda.py  estadisticas.py  grafo.py  hitos.py
services/python/scheduler/: fix_task_paths.ps1  fix_tasks_admin.ps1  run_check_deadlines.bat  run_daily_sync.bat  run_generate_drafts.bat
services/python/scripts/: analyze_writing_style.py  check_deadlines.py  daily_sync.py  generate_drafts.py  ingest_bulk.py  ingest_gmail_bulk.py  ingest_manual.py
services/python/src/alsari/: __init__.py  config.py
services/python/src/alsari/alerts/: deadlines.py  draft_replies.py  style_profile.txt  style_samples.json
services/python/src/alsari/alerts/write_like_guille/: examples.json  raw_pairs.jsonl  style_guide.md
services/python/src/alsari/db/: schema.py  supabase.py
services/python/src/alsari/extract/: docx.py  drive.py  gdocs.py  gmail.py  ocr.py  pdf.py  xlsx.py
services/python/src/alsari/mcp/: server.py
services/python/src/alsari/pipeline/: chunker.py  classifier.py  embedder.py  ingest.py
(+514 files in other folders)
