[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alsari"
version = "0.1.0"
description = "Alsari Capital knowledge system — document ingestion and semantic search"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "supabase>=2.9.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "pypdf>=5.0.0",
    "pypdfium2>=4.30.0",
    "google-genai>=0.8.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "tiktoken>=0.8.0",
    "mcp>=1.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
